# AlgoVisual

./: CMakeLists.txt
include/algorithms/: SortingAlgorithm.hpp
include/visualization/: VisualizationManager.hpp
src/: main.cpp
src/algorithms/: SortingAlgorithm.cpp
src/visualization/: VisualizationManager.cpp
tests/unit_tests/: CMakeLists.txt  test_sorting.cpp
